# fingerstyle-tab-mcp

./: .editorconfig  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  README_KR.md  SUMMARY.md  config.yaml.example  http_server.py  implementation_plan.md  mcp_server.py  nixpacks.toml  pyproject.toml  render.yaml  requirements.txt  setup.py  smithery.yaml  test_workflow.py
.github/workflows/: ci.yml  release.yml
src/: config.py  tab_generator.py  transcriber.py
tests/: __init__.py  test_config.py  test_tab_generator.py  test_transcriber.py
